--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
+  "homepage": "https://hleebarton97.github.io/primer",
   "scripts": {
     "start": "npm run code-analysis && npm run test && react-scripts start",
     "build": "react-scripts build",
@@ -18,7 +19,9 @@
     "test:nowatch": "set CI=true && react-scripts test --env=jsdom",
     "code-analysis": "standard",
     "code-analysis:fix": "standard --fix",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "pre-commit": [
     "test:nowatch",
@@ -48,6 +51,7 @@
     "bootstrap": "^4.3.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "gh-pages": "^2.1.1",
     "pre-commit": "^1.2.2",
     "react-bootstrap": "^1.0.0-beta.9",
     "standard": "^13.1.0"
